k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-app
  namespace: secure-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: fastapi-app
    ports:
      - name: http
        port: 80
        targetPort: http
